[package]
name = "sleep"
version = "1.0.2-alpha.0"
authors = ["hardliner66 <hardliner66@gmail.com>"]
edition = "2018"

description = "Create a command from a value of an INI-file and execute it."
license = "MIT OR Apache-2.0"
categories = ["command-line-utilities"]
keywords = ["sleep"]
repository = "https://github.com/hardliner66/sleep-rs"
readme = "README.md"

[dependencies]
clap = "2.33"
